# internal/api/rest/v0/responses/basics.go
@@ -1,4 +1,7 @@
 package responses
 
-type BasicConfig struct {
+type GetBasicConfig struct {
+	CheckInterval        int `json:"checkIntervalInSeconds"`
+	Timeout              int `json:"timeoutInSeconds"`
+	NotificationInterval int `json:"notificationIntervalInHours"`
 }
