# internal/api/rest/v0/responses/receiver.go
@@ -3,3 +3,8 @@ package responses
 type CreateReceiver struct {
 	ID int `json:"id"`
 }
+
+type GetReceivers struct {
+	ID    int    `json:"id"`
+	Email string `json:"email"`
+}
